fix: enable auction house link in footer, possible iPhone white space fix

--- a/src/assets/scss/normalize.scss
+++ b/src/assets/scss/normalize.scss
@@ -230,7 +230,7 @@ html {
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container {
